objects/Contact.object
<CustomObject>
    <fields>
        <fullName>pse__Send_to_Third_Party_Expenses_Application__c</fullName>
        <description>Controls whether or not the resource is sent to a third-party expenses application.</description>
        <formula>AND(pse__Is_Resource__c , pse__Is_Resource_Active__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Controls whether or not the resource is sent to a third-party expenses application.</inlineHelpText>
        <label>Send to Third-Party Expenses Application</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Start_Date__c</fullName>
        <description>A Resource&apos;s first date of employment.</description>
        <inlineHelpText>A Resource&apos;s first date of employment.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Sync_with_Jira__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Controls whether the resource is synchronized with Jira.</description>
        <inlineHelpText>Controls whether the resource is synchronized with Jira.</inlineHelpText>
        <label>Sync with Jira</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Total_Costs__c</fullName>
        <formula>pse__Internal_Costs__c + pse__External_Costs__c + pse__Expense_Costs__c + pse__Other_Costs__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>pse__Total_Time_Period_Hours__c</fullName>
        <description>[DEPRECATED, no longer used]</description>
        <label>Total Time Period Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Total_Utilization__c</fullName>
        <description>The overall (historical + scheduled) utilization percentage for the current time period. This value has been copied from the associated Utilization Detail object for this time period.</description>
        <label>Utilization</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Calculation_Date__c</fullName>
        <label>Utilization:  Last Calculation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Elapsed_Hours__c</fullName>
        <description>[DEPRECATED, no longer used]</description>
        <label>Utilization: Elapsed Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Full_Time_Period__c</fullName>
        <description>[DEPRECATED, no longer used]</description>
        <formula>IF((pse__Total_Time_Period_Hours__c&gt;pse__Excluded_Hours__c),IF(AND(NOT(ISNULL(pse__Billable_Internal_Hours__c)),NOT(ISNULL(pse__Credited_Non_Billable_Internal_Hours__c)),NOT(ISNULL(pse__Total_Time_Period_Hours__c)),NOT(ISNULL(pse__Excluded_Hours__c))),(pse__Billable_Internal_Hours__c + pse__Credited_Non_Billable_Internal_Hours__c)/(pse__Total_Time_Period_Hours__c - pse__Excluded_Hours__c),0.00),0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization: Over Full Time Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Last_Update_Date__c</fullName>
        <label>Utilization: Last Update Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Last_Updated_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Utilization: Last Updated By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Target_Attainment__c</fullName>
        <formula>IF(pse__Utilization_Target_Average__c = 0,
IF(pse__Total_Utilization__c &lt;= 0,0,1),
pse__Total_Utilization__c / pse__Utilization_Target_Average__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization Target Attainment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Target_Average__c</fullName>
        <formula>IF(pse__Historical_Utilization_Calendar_Hours__c +  pse__Scheduled_Utilization_Calendar_Hours__c = 0,
0,
pse__Utilization_Target_Hours__c / ( pse__Historical_Utilization_Calendar_Hours__c +  pse__Scheduled_Utilization_Calendar_Hours__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization Target Average</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Target_Hours__c</fullName>
        <label>Utilization Target Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Utilization_Target__c</fullName>
        <description>A target percentage of utilization for this resource. For example, a target of 50% for an 8 hour per day work calendar, results in a 4 hour per day target that the resource should be utilized for.</description>
        <inlineHelpText>A target percentage of utilization for this resource. For example, a target of 50% for an 8 hour per day work calendar, results in a 4 hour per day target that the resource should be utilized for.</inlineHelpText>
        <label>Utilization Target</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Utilization__c</fullName>
        <description>[DEPRECATED, no longer used]</description>
        <formula>IF((pse__Utilization_Elapsed_Hours__c&gt;pse__Excluded_Hours__c),IF(AND(NOT(ISNULL(pse__Billable_Internal_Hours__c)),NOT(ISNULL(pse__Credited_Non_Billable_Internal_Hours__c)),NOT(ISNULL(pse__Utilization_Elapsed_Hours__c)),NOT(ISNULL(pse__Excluded_Hours__c))),(pse__Billable_Internal_Hours__c + pse__Credited_Non_Billable_Internal_Hours__c)/(pse__Utilization_Elapsed_Hours__c - pse__Excluded_Hours__c),0.00),0.00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Utilization</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pse__Work_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Calendar</label>
        <referenceTo>pse__Work_Calendar__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>psaws__Resources_Started_in_the_Last_30_Days</fullName>
        <columns>FULL_NAME</columns>
        <columns>pse__Resource_Role__c</columns>
        <columns>pse__Utilization_Target__c</columns>
        <columns>pse__Region__c</columns>
        <columns>pse__Practice__c</columns>
        <columns>pse__Group__c</columns>
        <columns>pse__External_Resource__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>pse__Is_Resource_Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>pse__Start_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Resources Started in the Last 30 Days</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>